src/test/ui/malformed/malformed-plugin-2.stderr
error: attribute must be of the form `#[plugin(name|name(args))]`
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

